# mxsdl

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_example.cpp
include/mxsdl/: Core.hpp  Renderer.hpp  Texture.hpp  Window.hpp
src/mxsdl/: CMakeLists.txt  Core.cpp  Renderer.cpp  Texture.cpp  Window.cpp
